<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Search">Search</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="search_options"></string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="advanced_search_options">Advanced Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="title_activity_image_search_options">ImageSearchOptionsActivity</string>
    <string name="search_settings">Search Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="adv_search_options">Advanced Search Options</string>
    <string name="img_size">Image Size</string>
    <string name="save_button">Save</string>
    <string-array name="size_arrays">
        <item>icon</item>
        <item>small</item>
        <item>large</item>
        <item>huge</item>
    </string-array>
    <string-array name="type_arrays">
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string-array name="color_arrays">
        <item>blue</item>
        <item>green</item>
        <item>red</item>      
    </string-array>
        <string name="enter_filter">Site Filter</string>
    

</resources>
