<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/tvAdvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/adv_search_options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvImgSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColor"
        android:layout_below="@+id/tvAdvSearch"
        android:layout_marginTop="30dp"
        android:text="@string/img_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvImgType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvColor"
        android:layout_marginTop="30dp"
        android:text="@string/image_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImgType"
        android:layout_marginTop="30dp"
        android:text="@string/site_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImgSize"
        android:layout_alignParentRight="true"
        android:entries="@array/size_arrays"
        android:layout_toRightOf="@+id/tvImgType" />

    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColor"
        android:layout_alignParentRight="true"
        android:entries="@array/color_arrays"
        android:layout_alignTop="@+id/tvColor" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImgType"
        android:layout_alignParentRight="true"
        android:entries="@array/type_arrays"
        android:layout_alignTop="@+id/tvImgType" />

    <EditText
        android:id="@+id/etFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:ems="10" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="save"
        android:text="@string/save_button" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImgType"
        android:layout_below="@+id/tvImgSize"
        android:layout_marginTop="21dp"
        android:text="@string/color_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
